--- a/dante-alighieri-tribute.css
+++ b/dante-alighieri-tribute.css
@@ -127,6 +127,10 @@ p {
     padding: 1% 1% 1% 0%;
 }
 
+.p2 {
+  text-align: center;
+}
+
 .image-descript {
   text-align: center;
     font-family: 'Amatic SC', Sans-serif;
