--- a/dante-alighieri-tribute.css
+++ b/dante-alighieri-tribute.css
@@ -49,7 +49,7 @@ body {
 
 #img-div {
   background-color: #fff5ea;
-  margin: 1.8% 2% 0.8% 4%;
+  margin: 0% 2% 0.8% 4%;
   overflow: hidden;
   opacity: 0.95;
   border-radius: 5%;
@@ -182,16 +182,31 @@ display: block;
 margin-left: auto;
 margin-right: auto;
 max-width: 5%;
+opacity: 1;
 }
 
 #dante-bust:hover {
   transform: scaleX(-1);
 }
 
+.text-dividers {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 28%;
+}
+
+#first-divider {
+  max-width: 35%;
+}
+
+#second-divider {
+  max-width: 40%;
+}
 /*Scrollbar*/
 
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 3px;
 }
 
 ::-webkit-scrollbar-track {
