--- a/dante-alighieri-tribute.css
+++ b/dante-alighieri-tribute.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: #fbf7f0;
-  background: url(https://wallpapercave.com/wp/wp1873749.jpg) no-repeat center center fixed; 
+  background: url(background-img.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
