--- a/dante-alighieri-tribute.css
+++ b/dante-alighieri-tribute.css
@@ -175,6 +175,18 @@ max-width: 80%;
 border-style: solid;
 border-width: 2px;
 border-color: #ba6e03;
+transition: all .2s ease-in-out;
+}
+
+.dante-pictures:hover
+{
+         box-shadow:
+                1px 1px #f1f1f1,
+                2px 2px #f1f1f1,
+                3px 3px #f1f1f1;
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+        transform: scale(1.1)
 }
 
 #dante-bust {
