--- a/dante-alighieri-tribute.css
+++ b/dante-alighieri-tribute.css
@@ -52,14 +52,14 @@ body {
 }
 
 .footer {
-  background-color: #f4d9c6;
+  background-color: #fff5ea;
   margin: 0.8% 1.5% 0% 1.5%;
   border-style: solid;
   border-width: 1px;
   border-color: #ba6e03;
   padding: 0% 0% 0% 1%;
   border-radius: 10%;
-  opacity: 0.95;
+  opacity: 0.85;
 }
 
 /*Texts*/
@@ -80,9 +80,9 @@ h1 {
 
 #subquote {
   font-size: 80%;
-  padding: 0% 0% 0% 18%;
+  padding: 0% 4% 0% 18%;
   color: #ba6e03;
-  font-style: Sans-serif;
+  font-family: 'Julius Sans One', Sans-serif;
   
 }
 
@@ -93,7 +93,7 @@ h1 {
     box-shadow: 0 0 2.5em rgba(252, 212, 156, 0.2);
     margin: 0.8% 2% 0% 2%;
     padding: 5% 5% 7% 5%;
-    background-color: #fcdada;
+    background-color: #ffd5cd;
     vertical-align: bottom;
     border-radius: 3%;
 }
