--- a/dante-alighieri-tribute.css
+++ b/dante-alighieri-tribute.css
@@ -86,6 +86,12 @@ h1 {
   font-size: 15px;
 }
 
+@media only screen and (max-width: 320px) {
+  #subquote {
+    font-size: 8px;
+  }
+}
+
 .content {
     border-style: solid;
     border-width: 1px;
