--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   border-width: 1px;
   border-color: #ba6e03;
   background-color: transparent;
-  margin: 1% 22% 1% 22%;
+  margin: 1% 22.5% 1% 22.5%;
   padding: 0% 0% 0% 1.1%;
   border-radius: 10%;
 }
@@ -45,6 +45,22 @@ body {
   border-width: 2px;
 }
 
+.content {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ba6e03;
+  box-shadow: 0 0 2.5em rgba(252, 212, 156, 0.2);
+  margin: 0.8% 2% 0% 2%;
+  padding: 5% 5% 3% 5%;
+  background-color: #ffd5cd;
+  vertical-align: bottom;
+  border-radius: 3%;
+}
+
+#content1 {
+  padding: 5% 5% 4% 5%;
+}
+
 .rows {
   display: flex;
 }
@@ -56,7 +72,7 @@ body {
 
 .footer {
   background-color: #fff5ea;
-  margin: 0.8% 1.5% 0% 1.5%;
+  margin: 0.8% 5% 0% 5%;
   border-style: solid;
   border-width: 1px;
   border-color: #ba6e03;
@@ -82,7 +98,6 @@ h1 {
 }
 
 #subquote {
-  font-weight: 100;
   padding: 0% 4% 0% 18%;
   color: #ba6e03;
   font-family: 'Julius Sans One', Sans-serif;
@@ -93,18 +108,6 @@ h1 {
   #subquote {
     font-size: 8px;
   }
-}
-
-.content {
-    border-style: solid;
-    border-width: 1px;
-    border-color: #ba6e03;
-    box-shadow: 0 0 2.5em rgba(252, 212, 156, 0.2);
-    margin: 0.8% 2% 0% 2%;
-    padding: 5% 5% 7% 5%;
-    background-color: #ffd5cd;
-    vertical-align: bottom;
-    border-radius: 3%;
 }
 
 li {
