--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1 {
 li {
     font-family: 'Khula', sans-serif;
     list-style: none;
-    font-size: 20px;
+    font-size: 17px;
     color: #1c2b2d;
     padding: 1% 1% 1% 0%;
 }
@@ -137,7 +137,7 @@ h5 {
 
 p {
     font-family: 'Khula', Sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     color: #1c2b2d;
     padding: 1% 1% 1% 0%;
 }
@@ -154,7 +154,7 @@ p {
 .footer-text {
     text-align: center;
     font-family: 'Khula', Sans-serif;
-    font-size: 16px;
+    font-size: 12px;
     color: #ba6e03;
 }
 
@@ -195,10 +195,12 @@ transition: all .2s ease-in-out;
 
 .dante-pictures:hover
 {
-        box-shadow: 0 0 1em #fcf876;
-        -webkit-transform: translateX(-3px);
-        transform: translateX(-3px);
-        transform: scale(1.1)
+  box-shadow:
+  1px 1px #f5d6aa,
+  2px 2px #f5d6aa,
+  3px 3px #f5d6aa;
+-webkit-transform: translateX(-6px);
+transform: translateX(-8px);
 }
 
 #dante-bust {
