--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Julius+Sans+One);
 @import url(https://fonts.googleapis.com/css?family=Khula:300);
 @import url(https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap);
+@import url(CoventryGardenNF.ttf);
 
 body {
   background-color: #fbf7f0;
@@ -19,14 +20,15 @@ body {
   border-color: #ba6e03;
   background-color: transparent;
   margin: 1.5% 23.5% 1.25% 23.5%;
-  padding: 0.25% 0% 0.25% 0%;
+  padding: -0.5% 0% -0.5% 0%;
   border-radius: 10%;
 }
 
 #title {
-  font-size: 28px;
+  font-size: 35px;
   text-align: center;
-  font-family: 'Julius Sans One', Sans-Serif;
+  font-family: 'CoventryGardenNF', Sans-serif;
+  font-weight: lighter;
 }
 
 #text {
