--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ h1 {
 li {
     font-family: 'Khula', sans-serif;
     list-style: none;
-    font-size: 19.5px;
+    font-size: 21px;
     color: #1c2b2d;
     padding: 1% 1% 1% 0%;
 }
@@ -140,7 +140,7 @@ h5 {
 
 p {
     font-family: 'Khula', Sans-serif;
-    font-size: 19.5px;
+    font-size: 21px;
     color: #1c2b2d;
     padding: 1% 1% 1% 0%;
 }
@@ -213,7 +213,9 @@ opacity: 1;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 28%;
+    width: 100%;
+  max-width: 450px;
+  height: auto;
 }
 
 #first-divider {
