--- a/style.css
+++ b/style.css
@@ -37,11 +37,14 @@ body {
 
 #img-div {
   background-color: #ebcfc4;
-  margin: 2% 6% 2% 6%;
+  margin: 2% 9% 2% 9%;
   padding: 0% 0% 4% 0%;
   overflow: hidden;
   opacity: 0.95;
   border-radius: 5%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ba6e03;
 }
 
 .content {
@@ -71,6 +74,42 @@ body {
 .columns {
   flex: 33.33%;
   padding: 5px;
+}
+
+.rows1 {
+  height: 30%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: center;
+  flex: 1;
+}
+
+.columns1 {
+  flex: 20%;
+  padding: 1px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ba6e03;
+  background-color: transparent;
+  border-radius: 10%;
+  text-align: center;
+  justify-content: space-between;
+  transition: all 0.5s ease;
+  margin: 1% 12% 1% 12%;
+}
+
+.columns1:hover {
+  background-color: #ebcfc4;
+  cursor: pointer;
+}
+
+.menu {
+  font-size: 22px;
+}
+
+a {
+  color: #ba6e03;
 }
 
 .footer {
@@ -142,7 +181,7 @@ p {
     font-family: 'Khula', Sans-serif;
     font-size: 21px;
     color: #1c2b2d;
-    padding: 1% 1% 1% 0%;
+    padding: 0.5% 2% 0% 0%;
 }
 
 .p2 {
@@ -168,6 +207,7 @@ p {
   width: 100%;
   max-width: 500px;
   height: auto;
+  opacity: 1;
 }
 
 .dante-statue {
