--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a:hover {
 }
 
 .footer {
-  background: linear-gradient(#ecbdac,  rgb(212, 202, 201));
+  background: linear-gradient(#d4b8ad,  rgb(212, 202, 201));
   margin: 0.8% 5% 0% 5%;
   border-style: solid;
   border-width: 1px;
@@ -192,6 +192,7 @@ p {
     text-align: center;
     font-family: 'Khula', Sans-serif;
     font-size: 18px;
+    color: #754a0e;
 }
 
 /*Images*/
