--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
   border-style: solid;
   border-width: 1px;
   border-color: #ba6e03;
-  box-shadow: 0 0 2.5em rgba(252, 212, 156, 0.2);
+  box-shadow: 0 0 0.5em lightgoldenrodyellow;
   margin: 2% 2% 2% 2%;
   padding: 5% 5% 3% 5%;
   background: linear-gradient(#ebcfc4, rgb(252, 201, 195));
