--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@ a:hover {
 }
 
 .footer {
-  background: linear-gradient(#d4b8ad,  rgb(212, 202, 201));
-  margin: 0.8% 5% 0% 5%;
+  background: linear-gradient(#c29989,  rgb(212, 202, 201));
+  margin: 2% 9% 2% 9%;
   border-style: solid;
   border-width: 1px;
   border-color: #ba6e03;
